# playground

./: pyproject.toml
basic/better_python_code/: 1-3.ipynb  magic_num.py
basic/collections/: defaultdict.py
